english talk, sorry

--- a/code/outliers_inspection.ipynb
+++ b/code/outliers_inspection.ipynb
@@ -124,18 +124,18 @@
     "    Q3 = df[column].quantile(0.75)\n",
     "    IQR = Q3 - Q1\n",
     "\n",
-    "    # Definindo limites para identificar outliers\n",
+    "    # Setting thresholds to identify outliers\n",
     "    lower_bound = Q1 - 1.5 * IQR\n",
     "    upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
-    "    # Filtrando os outliers\n",
+    "    # Filtering outliers\n",
     "    df_filtered = df[(df[column] >= lower_bound) & (df[column] <= upper_bound)]\n",
     "    return df_filtered\n",
     "\n",
-    "# Remover outliers da coluna 'departure_delay_time'\n",
+    "# Remove outliers from 'departure_delay_time' column\n",
     "df = remove_outliers(df, 'departure_delay_time')\n",
     "\n",
-    "# Remover outliers da coluna 'arrival_delay_time'\n",
+    "# Remove outliers from 'arrival_delay_time' column\n",
     "df = remove_outliers(df, 'arrival_delay_time')"
    ]
   },
