arrival and departures full logs

--- a/code/metar_csv_creation.ipynb
+++ b/code/metar_csv_creation.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "from functions.func_metar_df_module import metar_processing\n",
-    "import os\n",
-    "import pandas as pd"
+    "import os"
    ]
   },
   {
@@ -20,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +47,13 @@
     "#saving csv\n",
     "metar.to_csv(path + '\\\\metar_logs.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
