R analysis before bed

--- a/code/notebook_test.ipynb
+++ b/code/notebook_test.ipynb
@@ -109,19 +109,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "metar"
+    "flights = pd.read_csv(os.getcwd() + r'\\\\main_related_archives\\\\departure_logs.csv')\n",
+    "flights_ = pd.read_csv(os.getcwd() + r'\\\\main_related_archives\\\\arrival_logs.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['in_time' 'delayed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_departure_status = flights['departure_status'].unique()\n",
+    "print(unique_departure_status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['in_time' 'delayed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_departure_status = flights_['arrival_status'].unique()\n",
+    "print(unique_departure_status)"
+   ]
   }
  ],
  "metadata": {
