creating boolean rain column on arrival_csv_creation notebook

--- a/code/arrival_csv_creation.ipynb
+++ b/code/arrival_csv_creation.ipynb
@@ -114,12 +114,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### 1.4 Juntando chuvas em um dado só"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining values ​​that indicate rain\n",
+    "weather_conditions = ['-RA', 'TS', '-TSRA', '+TSRA', 'RA', 'TSRA']\n",
+    "\n",
+    "# creating new column for rain 'RA' (boolean)\n",
+    "arrival['RA'] = arrival['current_wx1'].isin(weather_conditions).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2 - Exporting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +151,13 @@
     "#saving csv\n",
     "arrival.to_csv(path + '\\\\arrival_logs.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
