summaries to arrival model

--- a/code/arrival_csv_creation.ipynb
+++ b/code/arrival_csv_creation.ipynb
@@ -119,15 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Defining values ​​that indicate rain\n",
-    "weather_conditions = ['-RA', 'TS', '-TSRA', '+TSRA', 'RA', 'TSRA']\n",
+    "weather_conditions = ['TS', '-TSRA', '+TSRA', 'TSRA']\n",
     "\n",
     "# creating new column for rain 'RA' (boolean)\n",
-    "arrival['RA'] = arrival['current_wx1'].isin(weather_conditions).astype(int)"
+    "arrival['ts_plus'] = arrival['current_wx1'].isin(weather_conditions).astype(int)"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
