r analylis and python copy files to rproject dir

--- a/code/arrival_csv_creation.ipynb
+++ b/code/arrival_csv_creation.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import shutil"
    ]
   },
   {
@@ -127,7 +128,7 @@
     "weather_conditions = ['TS', '-TSRA', '+TSRA', 'TSRA']\n",
     "\n",
     "# creating new column for rain 'RA' (boolean)\n",
-    "arrival['ts_plus'] = arrival['current_wx1'].isin(weather_conditions).astype(int)"
+    "arrival['ts'] = arrival['current_wx1'].isin(weather_conditions).astype(int)"
    ]
   },
   {
@@ -146,18 +147,63 @@
     "# transform dataframe to csv and saves on main_related_archives folder\n",
     "\n",
     "#getting path folder\n",
-    "path = os.getcwd() + r'\\\\main_related_archives'\n",
+    "path = os.getcwd() + '/main_related_archives'\n",
     "\n",
     "#saving csv\n",
-    "arrival.to_csv(path + '\\\\arrival_logs.csv', index=False)"
+    "arrival.to_csv(path + '/arrival_logs.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3 - Coping to RProject folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get actual dir\n",
+    "current_dir = os.getcwd()\n",
+    "\n",
+    "# get father dir\n",
+    "parent_dir = os.path.dirname(current_dir)\n",
+    "\n",
+    "# dir r_analysis (R Project dir)\n",
+    "r_path = parent_dir + '/r_analysis'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\Data Scientist\\\\MBA\\\\TCC\\\\repo\\\\weather-delay-investigation-MBA-/r_analysis/arrival_logs.csv'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Copyng original file to r_project dir\n",
+    "\n",
+    "# original path file (plus archive name)\n",
+    "original_csv = path + '/arrival_logs.csv'\n",
+    "\n",
+    "# r_project file path to save (plus archiuve name)\n",
+    "copy_path = r_path + '/arrival_logs.csv'\n",
+    "\n",
+    "# Copiando o arquivo\n",
+    "shutil.copy2(original_csv, copy_path)"
+   ]
   }
  ],
  "metadata": {
