--- a/code/departure_csv_creation.ipynb
+++ b/code/departure_csv_creation.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import shutil"
    ]
   },
   {
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +131,58 @@
     "\n",
     "#saving csv\n",
     "departure.to_csv(path + '\\\\departure_logs.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3 - Coping to RProject folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get actual dir\n",
+    "current_dir = os.getcwd()\n",
+    "\n",
+    "# get father dir\n",
+    "parent_dir = os.path.dirname(current_dir)\n",
+    "\n",
+    "# dir r_analysis (R Project dir)\n",
+    "r_path = parent_dir + '/r_analysis'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\Data Scientist\\\\MBA\\\\TCC\\\\repo\\\\weather-delay-investigation-MBA-/r_analysis/departure_logs.csv'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Copyng original file to r_project dir\n",
+    "\n",
+    "# original path file (plus archive name)\n",
+    "original_csv = path + '/departure_logs.csv'\n",
+    "\n",
+    "# r_project file path to save (plus archiuve name)\n",
+    "copy_path = r_path + '/departure_logs.csv'\n",
+    "\n",
+    "# Copiando o arquivo\n",
+    "shutil.copy2(original_csv, copy_path)"
    ]
   }
  ],
